--- a/portfolio.html
+++ b/portfolio.html
@@ -58,10 +58,9 @@
                             <div class="overlay-block">
                                 <img src="./images/banking-app-interface.jpg" alt="The interface of a banking app"
                                     width="360" height="300">
-                                <span class="overlay-text-wrap">
-                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                        Doloribus eaque quidem saepe ipsam ducimus </p>
-                                </span>
+                                <p class="overlay-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App </p>
                             </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Banking App Interface Concept</h2>
@@ -74,10 +73,9 @@
                             <div class="overlay-block">
                                 <img src="./images/cashless-payment.jpg" alt="A phone scanning QR code for payment"
                                     width="360" height="300">
-                                <span class="overlay-text-wrap">
-                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                        Doloribus eaque quidem saepe ipsam ducimus </p>
-                                </span>
+                                <p class="overlay-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App </p>
                             </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Cashless Payment</h2>
@@ -90,10 +88,9 @@
                             <div class="overlay-block">
                                 <img src="./images/meditation-app.jpg"
                                     alt="Interface of the meditation app on laptom and phone" width="360" height="300">
-                                <span class="overlay-text-wrap">
-                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                        Doloribus eaque quidem saepe ipsam ducimus </p>
-                                </span>
+                                <p class="overlay-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App </p>
                             </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Meditation App</h2>
@@ -106,10 +103,9 @@
                             <div class="overlay-block">
                                 <img src="./images/taxi-service.jpg"
                                     alt="A man driving a car looking at map on his phone" width="360" height="300">
-                                <span class="overlay-text-wrap">
-                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                        Doloribus eaque quidem saepe ipsam ducimus </p>
-                                </span>
+                                <p class="overlay-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App </p>
                             </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Taxi Service</h2>
@@ -122,10 +118,9 @@
                             <div class="overlay-block">
                                 <img src="./images/screen-illustrations.jpg" alt=" Wallpapers with the Moon on a phone"
                                     width="360" height="300">
-                                <span class="overlay-text-wrap">
-                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                        Doloribus eaque quidem saepe ipsam ducimus </p>
-                                </span>
+                                <p class="overlay-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App </p>
                             </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Screen Illustrations</h2>
@@ -138,10 +133,9 @@
                             <div class="overlay-block">
                                 <img src="./images/online-courses.jpg" alt="A happy woman looking at her phone"
                                     width="360" height="300">
-                                <span class="overlay-text-wrap">
-                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                        Doloribus eaque quidem saepe ipsam ducimus </p>
-                                </span>
+                                <p class="overlay-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App </p>
                             </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Online Courses</h2>
@@ -154,10 +148,9 @@
                             <div class="overlay-block">
                                 <img src="./images/instagram-stories.jpg"
                                     alt="Various examples of stylelized Instagram stories" width="360" height="300">
-                                <span class="overlay-text-wrap">
-                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                        Doloribus eaque quidem saepe ipsam ducimus </p>
-                                </span>
+                                <p class="overlay-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App </p>
                             </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Instagram Stories Concept</h2>
@@ -170,10 +163,9 @@
                             <div class="overlay-block">
                                 <img src="./images/organic-food.jpg" alt="A wooman walking with a bag of vegetables"
                                     width="360" height="300">
-                                <span class="overlay-text-wrap">
-                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                        Doloribus eaque quidem saepe ipsam ducimus </p>
-                                </span>
+                                <p class="overlay-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App </p>
                             </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Organic Food</h2>
@@ -186,10 +178,9 @@
                             <div class="overlay-block">
                                 <img src="./images/fresh-coffee.jpg" alt="A man pouring himself a cofee" width="360"
                                     height="300">
-                                <span class="overlay-text-wrap">
-                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                        Doloribus eaque quidem saepe ipsam ducimus </p>
-                                </span>
+                                <p class="overlay-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App </p>
                             </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Fresh Coffee</h2>
@@ -204,7 +195,7 @@
 
     <footer class="footer">
         <div class="container footer-container">
-            <div>
+            <div class="footer-copyright">
                 <a href="./index.html" class="logo link footer-logo">Web<span
                         class="footer-studio-color">Studio</span></a>
                 <p class="copyright-text">Increase the flow of customers and sales for your business with digital
@@ -217,44 +208,37 @@
                 <ul class="list footer-social-list">
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link">
-                            <span>
-                                <svg class="footer-social-icon" width="24" height="24">
-                                    <use href="/images/icons.svg#icon-instagram"></use>
-                                </svg>
-                            </span>
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="/images/icons.svg#icon-instagram"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link">
-                            <span>
-                                <svg class="footer-social-icon" width="24" height="24">
-                                    <use href="/images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </span>
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="/images/icons.svg#icon-twitter"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link">
-                            <span>
-                                <svg class="footer-social-icon" width="24" height="24">
-                                    <use href="/images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </span>
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="/images/icons.svg#icon-facebook"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link">
-                            <span>
-                                <svg class="footer-social-icon" width="24" height="24">
-                                    <use href="/images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </span>
+                            <svg class="footer-social-icon" width="24" height="24">
+                                <use href="/images/icons.svg#icon-linkedin"></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
     </footer>
+
 </body>
 
 </html>
