--- a/index.html
+++ b/index.html
@@ -279,48 +279,42 @@
                 <ul class="list customers-list">
                     <li class="customers-item">
                         <a href="" class="customers-link">
-                            <svg class="customers-icon" width="
-104" height="56">
+                            <svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Client-logo-1"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a href="" class="customers-link">
-                            <svg class="customers-icon" width="
-104" height="56">
+                            <svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Client-logo-2"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a href="" class="customers-link">
-                            <svg class="customers-icon" width="
-104" height="56">
+                            <svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Client-logo-3"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a href="" class="customers-link">
-                            <svg class="customers-icon" width="
-104" height="56">
+                            <svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Client-logo-4"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a href="" class="customers-link">
-                            <svg class="customers-icon" width="
-104" height="56">
+                            <svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Client-logo-5"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="customers-item">
                         <a href="" class="customers-link">
-                            <svg class="customers-icon" width="
-104" height="56">
+                            <svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-Client-logo-6"></use>
                             </svg>
                         </a>
