--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
 
                 <ul class="list portfolio-project-wrap">
                     <li class="portfolio-project-item">
-                        <a class="link portfolio-project-link">
+                        <a href="" class="link portfolio-project-link">
                             <div class="overlay-block">
                                 <img src="./images/banking-app-interface.jpg" alt="The interface of a banking app"
                                     width="360" height="300">
@@ -69,7 +69,7 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link portfolio-project-link">
+                        <a href="" class="link portfolio-project-link">
                             <div class="overlay-block">
                                 <img src="./images/cashless-payment.jpg" alt="A phone scanning QR code for payment"
                                     width="360" height="300">
@@ -84,7 +84,7 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link portfolio-project-link">
+                        <a href="" class="link portfolio-project-link">
                             <div class="overlay-block">
                                 <img src="./images/meditation-app.jpg"
                                     alt="Interface of the meditation app on laptom and phone" width="360" height="300">
@@ -99,7 +99,7 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link portfolio-project-link">
+                        <a href="" class="link portfolio-project-link">
                             <div class="overlay-block">
                                 <img src="./images/taxi-service.jpg"
                                     alt="A man driving a car looking at map on his phone" width="360" height="300">
@@ -114,7 +114,7 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link portfolio-project-link">
+                        <a href="" class="link portfolio-project-link">
                             <div class="overlay-block">
                                 <img src="./images/screen-illustrations.jpg" alt=" Wallpapers with the Moon on a phone"
                                     width="360" height="300">
@@ -129,7 +129,7 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link portfolio-project-link">
+                        <a href="" class="link portfolio-project-link">
                             <div class="overlay-block">
                                 <img src="./images/online-courses.jpg" alt="A happy woman looking at her phone"
                                     width="360" height="300">
@@ -144,7 +144,7 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link portfolio-project-link">
+                        <a href="" class="link portfolio-project-link">
                             <div class="overlay-block">
                                 <img src="./images/instagram-stories.jpg"
                                     alt="Various examples of stylelized Instagram stories" width="360" height="300">
@@ -159,7 +159,7 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link portfolio-project-link">
+                        <a href="" class="link portfolio-project-link">
                             <div class="overlay-block">
                                 <img src="./images/organic-food.jpg" alt="A wooman walking with a bag of vegetables"
                                     width="360" height="300">
@@ -174,7 +174,7 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link portfolio-project-link">
+                        <a href="" class="link portfolio-project-link">
                             <div class="overlay-block">
                                 <img src="./images/fresh-coffee.jpg" alt="A man pouring himself a cofee" width="360"
                                     height="300">
